# c-testing

./: CMakeLists.txt  Makefile
cmake/: c_testing.cmake
source/testing/: CMakeLists.txt  asserts.h  prints.c  prints.h  runner.c  runner.h  testing.h
unit-tests/testing/: CMakeLists.txt  asserts_test.c
